--- a/internet-shutdown-here-are-top-offline-messaging-apps.html
+++ b/internet-shutdown-here-are-top-offline-messaging-apps.html
@@ -425,7 +425,7 @@ img.emoji {
 				<div class="ub-author-box">
 			<div class="ub-author">
 				<div class="author-thumbnail">
-					<a href="author/admin/index.html"><img alt='' src='http://1.gravatar.com/avatar/4f7a79714aaca6efc0ce4f7c933538cc?s=90&amp;d=mm&amp;r=g' srcset='http://1.gravatar.com/avatar/4f7a79714aaca6efc0ce4f7c933538cc?s=180&amp;d=mm&amp;r=g 2x' class='avatar avatar-90 photo' height='90' width='90' /></a>
+					<a href="author/admin/index.html"><img alt='' src='https://scontent.fcok3-1.fna.fbcdn.net/v/t1.0-1/p240x240/48270856_2261441830799651_1350554270113464320_n.jpg?_nc_cat=107&_nc_ohc=8GBysQ5qBpwAQkgIAceCDEPmZAAOvRMEpEMd2Rabc5wc92hj8Xo9l2qTQ&_nc_ht=scontent.fcok3-1.fna&oh=d9e948d651d072f4ab492960313253e2&oe=5E79E19A' srcset='https://scontent.fcok3-1.fna.fbcdn.net/v/t1.0-1/p240x240/48270856_2261441830799651_1350554270113464320_n.jpg?_nc_cat=107&_nc_ohc=8GBysQ5qBpwAQkgIAceCDEPmZAAOvRMEpEMd2Rabc5wc92hj8Xo9l2qTQ&_nc_ht=scontent.fcok3-1.fna&oh=d9e948d651d072f4ab492960313253e2&oe=5E79E19A' class='avatar avatar-90 photo' height='90' width='90' /></a>
 				</div><!--End-post-thumbnail-->
 				<div class="info-author">
 					<h4><span>Salman Ponnani </span>- CEO of company as Answer Wiky</h4>
