--- a/internet-shutdown-here-are-top-offline-messaging-apps.html
+++ b/internet-shutdown-here-are-top-offline-messaging-apps.html
@@ -431,10 +431,10 @@ img.emoji {
 					<h4><span>Salman Ponnani </span>- CEO of company as Answer Wiky</h4>
 										<p>Internet shutdown ? Here are the top offline messaging app</p>
 					<div class="ub-author-link">
-																		<a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
-																		<a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
-																		<a target="_blank" href="#"><i class="fa fa-google-plus"></i></a>
-																		<a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>
+							
+							                                            <a target="_blank" href="https://wa.me/919037631786"><i class="fa fa-whatsapp" style="font-size:48px;color:green"></i></a>
+																		<a target="_blank" href="https://www.facebook.com/sayyidsalmanponnani"><i class="fa fa-facebook"></i></a>
+																	 
 											</div>
 				</div><!--End-info-post-->
 			</div>
