--- a/internet-shutdown-here-are-top-offline-messaging-apps.html
+++ b/internet-shutdown-here-are-top-offline-messaging-apps.html
@@ -168,11 +168,10 @@ img.emoji {
 </ul>	</div>
 	<div class="pull-right">
 		<ul class="rst-list-social">
-		<li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
-			<li><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
-			<li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-			<li><a target="_blank" href="#"><i class="fa fa-tumblr"></i></a></li>
-					<li><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
+
+				<li><a target="_blank" href="https://api.whatsapp.com/send?phone=919037631786&text=Hi"><i class="fa fa-whatsapp" style="font-size:20px;color:green"></i></a></li>
+				<li><a target="_blank" href="https://www.facebook.com/sayyidsalmanponnani"><i class="fa fa-facebook" style="font-size:18px;color:blue"></i></a></li>
+ 
 														</ul>	</div>
 </div><div class="top-header">
   	<div class="row">
@@ -432,8 +431,8 @@ img.emoji {
 										<p>Internet shutdown ? Here are the top offline messaging app</p>
 					<div class="ub-author-link">
 							
-							                                            <a target="_blank" href="https://wa.me/919037631786"><i class="fa fa-whatsapp" style="font-size:48px;color:green"></i></a>
-																		<a target="_blank" href="https://www.facebook.com/sayyidsalmanponnani"><i class="fa fa-facebook"></i></a>
+							                                            <a target="_blank" href="https://api.whatsapp.com/send?phone=919037631786&text=Hi"><i class="fa fa-whatsapp" style="font-size:20px;color:green"></i></a>
+																		<a target="_blank" href="https://www.facebook.com/sayyidsalmanponnani"><i class="fa fa-facebook" style="font-size:18px;color:blue"></i></a>
 																	 
 											</div>
 				</div><!--End-info-post-->
